Perbaikan JSON-LD halaman Detail Portfolio

--- a/portfolio/Excel-Akuntansi-Otomatis.html
+++ b/portfolio/Excel-Akuntansi-Otomatis.html
@@ -26,7 +26,7 @@
     <script type="application/ld+json">
     {
       "@context": "https://schema.org",
-      "@type": "Project",
+      "@type": "CreativeWork",
       "name": "Aplikasi Akuntansi - Excel by Maulana Satria Nugraha",
       "url": "https://maulana-satria.pages.dev/portfolio/Excel-Akuntansi-Otomatis",
       "description": "Aplikasi laporan keuangan otomatis berbasis Excel karya Maulana Satria Nugraha untuk memudahkan pembuatan laporan akuntansi sekolah dan institusi.",
@@ -42,7 +42,9 @@
           "https://www.facebook.com/msn.socialpreneur/",
           "https://github.com/CodeByMaul"
         ]
-      }
+      },
+      "image": "https://maulana-satria.pages.dev/bahan/Priview-Apk-Akun-L-1.webp",
+      "inLanguage": "id"
     }
     </script>
 
