--- a/portfolio/Excel-Buku-Kepegawaian.html
+++ b/portfolio/Excel-Buku-Kepegawaian.html
@@ -27,7 +27,7 @@
     <script type="application/ld+json">
     {
       "@context": "https://schema.org",
-      "@type": "Project",
+      "@type": "CreativeWork",
       "name": "Buku Kepegawaian Excel otomatis by Maulana Satria Nugraha",
       "url": "https://maulana-satria.pages.dev/portfolio/Excel-Buku-Kepegawaian",
       "description": "Buku Kepegawaian berbasis Excel otomatis karya Maulana Satria Nugraha. Dilengkapi dashboard interaktif, template administrasi, dan fitur otomatisasi untuk mempermudah pengelolaan data kepegawaian sekolah dan institusi.",
@@ -43,7 +43,9 @@
           "https://www.facebook.com/msn.socialpreneur/",
           "https://github.com/CodeByMaul"
         ]
-      }
+      },
+      "image": "https://maulana-satria.pages.dev/bahan/Priview-Buku-Kepegawaian-L-1.webp",
+      "inLanguage": "id"
     }
     </script>
 
