--- a/portfolio/Website-Sekolah-DCD-Academy.html
+++ b/portfolio/Website-Sekolah-DCD-Academy.html
@@ -25,7 +25,7 @@
     <script type="application/ld+json">
     {
       "@context": "https://schema.org",
-      "@type": "Project",
+      "@type": "CreativeWork",
       "name": "Website Sekolah DCD Academy (Fiktif) - Project Maulana Satria Nugraha",
       "url": "https://maulana-satria.pages.dev/portfolio/Website-Sekolah-DCD-Academy",
       "description": "Detail proyek Website Sekolah DCD Academy berbasis HTML, CSS, dan JavaScript. Dibangun oleh Webdev Warriors dengan Maulana Satria Nugraha sebagai Project Manager.",
@@ -41,7 +41,9 @@
           "https://www.facebook.com/msn.socialpreneur/",
           "https://github.com/CodeByMaul"
         ]
-      }
+      },
+      "image": "https://maulana-satria.pages.dev/bahan/Priview-Website-L-1.webp",
+      "inLanguage": "id"
     }
     </script>
 
