--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       "sameAs": [
         "https://www.linkedin.com/in/maulana-satria-nugraha",
         "https://www.instagram.com/maulana.satria_n/",
-        "https://www.facebook.com/msn.socialpreneur/",
+        "https://www.facebook.com/maulana.satria.nugraha/",
         "https://github.com/CodeByMaul"
       ]
     }
@@ -130,7 +130,7 @@
             <a href="https://www.instagram.com/maulana.satria_n/" target="_blank" rel="noopener">
               <img src="bahan/logo-IG.webp" alt="IG_Maulana.SN"/>
             </a>
-            <a href="https://www.facebook.com/msn.socialpreneur/" target="_blank" rel="noopener">
+            <a href="https://www.facebook.com/maulana.satria.nugraha/" target="_blank" rel="noopener">
               <img src="bahan/logo-FB.webp" alt="FB_Maulana.SN" />
             </a>
           </div>
