--- a/portfolio/Excel-Akuntansi-Otomatis.html
+++ b/portfolio/Excel-Akuntansi-Otomatis.html
@@ -52,6 +52,21 @@
     <link rel="stylesheet" href="/custom.css" />
     <link rel="stylesheet" href="/Responsive.css" />
 
+    <!-- Open Graph Meta (untuk Facebook, LinkedIn, WhatsApp) -->
+    <meta property="og:title" content="Aplikasi Akuntansi Excel Otomatis - Project Maulana Satria Nugraha" />
+    <meta property="og:description" content="Lihat detail proyek Aplikasi Akuntansi berbasis Excel karya Maulana Satria Nugraha. Lengkap dengan rumus otomatis, laporan keuangan, dan dashboard praktis untuk sekolah / institusi." />
+    <meta property="og:image" content="https://maulana-satria.pages.dev/bahan/maul-favicon.ico" />
+    <meta property="og:url" content="https://maulana-satria.pages.dev/portfolio/Excel-Akuntansi-Otomatis" />
+    <meta property="og:type" content="website" />
+    <meta property="og:locale" content="id_ID" />
+
+    <!-- Twitter Card Meta (berfungsi juga di beberapa platform lain) -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Aplikasi Akuntansi Excel Otomatis - Project Maulana Satria Nugraha" />
+    <meta name="twitter:description" content="Lihat detail proyek Aplikasi Akuntansi berbasis Excel karya Maulana Satria Nugraha. Lengkap dengan rumus otomatis, laporan keuangan, dan dashboard praktis untuk sekolah / institusi." />
+    <meta name="twitter:image" content="https://maulana-satria.pages.dev/bahan/maul-favicon.ico" />
+    <meta name="twitter:url" content="https://maulana-satria.pages.dev/portfolio/Excel-Akuntansi-Otomatis" />
+
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-RJV4SXKQMB"></script>
     <script>
