Update og untuk halaman project Aplikasi Akuntansi Excel - Part 2

--- a/portfolio/Excel-Akuntansi-Otomatis.html
+++ b/portfolio/Excel-Akuntansi-Otomatis.html
@@ -55,7 +55,7 @@
     <!-- Open Graph Meta (untuk Facebook, LinkedIn, WhatsApp) -->
     <meta property="og:title" content="Aplikasi Akuntansi Excel Otomatis - Project Maulana Satria Nugraha" />
     <meta property="og:description" content="Lihat detail proyek Aplikasi Akuntansi berbasis Excel karya Maulana Satria Nugraha. Lengkap dengan rumus otomatis, laporan keuangan, dan dashboard praktis untuk sekolah / institusi." />
-    <meta property="og:image" content="https://maulana-satria.pages.dev/bahan/maul-favicon.ico" />
+    <meta property="og:image" content="https://maulana-satria.pages.dev/bahan/og-Logo-Maul.webp" />
     <meta property="og:url" content="https://maulana-satria.pages.dev/portfolio/Excel-Akuntansi-Otomatis" />
     <meta property="og:type" content="website" />
     <meta property="og:locale" content="id_ID" />
@@ -64,7 +64,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Aplikasi Akuntansi Excel Otomatis - Project Maulana Satria Nugraha" />
     <meta name="twitter:description" content="Lihat detail proyek Aplikasi Akuntansi berbasis Excel karya Maulana Satria Nugraha. Lengkap dengan rumus otomatis, laporan keuangan, dan dashboard praktis untuk sekolah / institusi." />
-    <meta name="twitter:image" content="https://maulana-satria.pages.dev/bahan/maul-favicon.ico" />
+    <meta name="twitter:image" content="https://maulana-satria.pages.dev/bahan/og-Logo-Maul.webp" />
     <meta name="twitter:url" content="https://maulana-satria.pages.dev/portfolio/Excel-Akuntansi-Otomatis" />
 
     <!-- Google tag (gtag.js) -->
