Penambahan sitename untuk semua halaman

--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
     <!-- Icon Website -->
     <link rel="icon" type="image/x-icon" href="/bahan/maul-favicon.ico">
 
-    <title>Portfolio of Maulana Satria Nugraha</title>
+    <title>Portfolio | Maulana Satria Nugraha</title>
 
     <!-- Structured Data JSON-LD -->
     <script type="application/ld+json">
@@ -70,6 +70,7 @@
     <link rel="stylesheet" href="Responsive.css" />
 
     <!-- Open Graph Meta (untuk Facebook, LinkedIn, WhatsApp) -->
+    <meta property="og:site_name" content="Maulana Satria Nugraha - Excel Expert">
     <meta property="og:title" content="Portofolio Maulana Satria Nugraha" />
     <meta property="og:description" content="Portofolio List Project yang pernah dikerjakan oleh Maulana Satria Nugraha" />
     <meta property="og:image" content="https://maulana-satria.pages.dev/bahan/og-portfolio.webp" />
