--- a/portfolio/Excel-Akuntansi-Otomatis.html
+++ b/portfolio/Excel-Akuntansi-Otomatis.html
@@ -20,7 +20,7 @@
     <!-- Icon Website -->
     <link rel="icon" type="image/x-icon" href="/bahan/maul-favicon.ico">
 
-    <title>Aplikasi Akuntansi Excel Otomatis - Maulana Satria Nugraha</title>
+    <title>Aplikasi Akuntansi Excel Otomatis | Maulana Satria Nugraha</title>
 
     <!-- Structured Data JSON-LD -->
     <script type="application/ld+json">
@@ -53,6 +53,7 @@
     <link rel="stylesheet" href="/Responsive.css" />
 
     <!-- Open Graph Meta (untuk Facebook, LinkedIn, WhatsApp) -->
+    <meta property="og:site_name" content="Maulana Satria Nugraha - Excel Expert">
     <meta property="og:title" content="Aplikasi Akuntansi Excel Otomatis - Project Maulana Satria Nugraha" />
     <meta property="og:description" content="Lihat detail proyek Aplikasi Akuntansi berbasis Excel karya Maulana Satria Nugraha. Lengkap dengan rumus otomatis, laporan keuangan, dan dashboard praktis untuk sekolah / institusi." />
     <meta property="og:image" content="https://maulana-satria.pages.dev/bahan/og-Logo-Maul.webp" />
