--- a/portfolio/Excel-Buku-Kepegawaian.html
+++ b/portfolio/Excel-Buku-Kepegawaian.html
@@ -53,6 +53,9 @@
     <link rel="stylesheet" href="/custom.css" />
     <link rel="stylesheet" href="/Responsive.css" />
 
+    <!-- Open Graph Meta (untuk Facebook, LinkedIn, WhatsApp) -->
+    <meta property="og:site_name" content="Maulana Satria Nugraha - Excel Expert">
+
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-RJV4SXKQMB"></script>
     <script>
