--- a/portfolio/Excel-Buku-Kontrol-Pembayaran-Mahasiswa.html
+++ b/portfolio/Excel-Buku-Kontrol-Pembayaran-Mahasiswa.html
@@ -18,7 +18,7 @@
     <!-- Icon Website -->
     <link rel="icon" type="image/x-icon" href="/bahan/maul-favicon.ico">
 
-    <title>Excel Buku Kontrol Pembayaran Mahasiswa</title>
+    <title>Excel Buku Kontrol Pembayaran Mahasiswa | Maulana Satria Nugraha</title>
 
     <!-- Structured Data JSON-LD -->
     <!--(Belum dibuat)-->
@@ -26,6 +26,9 @@
     <!-- CSS -->
     <link rel="stylesheet" href="/custom.css" />
     <link rel="stylesheet" href="/Responsive.css" />
+
+    <!-- Open Graph Meta (untuk Facebook, LinkedIn, WhatsApp) -->
+    <meta property="og:site_name" content="Maulana Satria Nugraha - Excel Expert">
 
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-RJV4SXKQMB"></script>
