--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
     <!-- Icon Website -->
     <link rel="icon" type="image/x-icon" href="/bahan/maul-favicon.ico">
 
-    <title>About Maulana Satria Nugraha</title>
+    <title>About | Maulana Satria Nugraha</title>
 
     <!-- Structured Data JSON-LD -->
     <script type="application/ld+json">
@@ -54,6 +54,9 @@
     <!-- CSS -->
     <link rel="stylesheet" href="custom.css" />
     <link rel="stylesheet" href="Responsive.css" />
+
+    <!-- Open Graph Meta (untuk Facebook, LinkedIn, WhatsApp) -->
+    <meta property="og:site_name" content="Maulana Satria Nugraha - Excel Expert">
 
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-RJV4SXKQMB"></script>
