--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
     <link rel="canonical" href="https://maulana-satria.pages.dev/" />
 
     <!-- Open Graph Meta (untuk Facebook, LinkedIn, WhatsApp) -->
+    <meta property="og:site_name" content="Maulana Satria Nugraha - Excel Expert">
     <meta property="og:title" content="Portofolio Maulana Satria Nugraha" />
     <meta property="og:description" content="Website portofolio profesional Maulana Satria Nugraha — Excel Expert | Finance & Administrative Support." />
     <meta property="og:image" content="https://maulana-satria.pages.dev/bahan/og-index.webp" />
