--- a/portfolio/Website-Sekolah-DCD-Academy.html
+++ b/portfolio/Website-Sekolah-DCD-Academy.html
@@ -19,7 +19,7 @@
     <!-- Icon Website -->
     <link rel="icon" type="image/x-icon" href="/bahan/maul-favicon.ico">
 
-    <title>Website Sekolah DCD Academy (Fiktif) - Project Maulana Satria Nugraha</title>
+    <title>Website Sekolah DCD Academy (Dummy/Fiktif) | Maulana Satria Nugraha</title>
 
     <!-- Structured Data JSON-LD -->
     <script type="application/ld+json">
@@ -50,6 +50,9 @@
     <!-- CSS -->
     <link rel="stylesheet" href="/custom.css" />
     <link rel="stylesheet" href="/Responsive.css" />
+
+    <!-- Open Graph Meta (untuk Facebook, LinkedIn, WhatsApp) -->
+    <meta property="og:site_name" content="Maulana Satria Nugraha - Excel Expert">
 
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-RJV4SXKQMB"></script>
