Perubahan Draft Excel Akuntansi dan Kepegawaian, penambahan Portofolio untuk Yayasan Haqqus Sunnah Pemalang

--- a/gallery.html
+++ b/gallery.html
@@ -88,25 +88,31 @@
           <h1>Momen Belajar & Berkarya</H1>
           <p>Sekilas perjalanan saya dalam dunia kerja, belajar, dan berbagi...</p>
         </div>
-        <!-- coming soon masih nyari fotonya
+        
         <article>
-          <h2>Yayasan Haqqus Sunnah Pemalang</h2>
+          <h2>Yayasan Haqqus Sunnah Pemalang - SDIT-SMPIT Bina Ilmu Pemalang</h2>
           <div class="Album">
-            <div> -- Gambar 1 --
-              <img src="gambar.jpg" alt="gambar" />
-              <p>Isi tulisan</p>
+            <div> <!-- Gambar 1 -->
+              <img src="/gallery/Yayasan-Haqqus-Sunnah-Pemalang/Rapat-Persiapan-SPMB-SDIT-Bina-Ilmu-Pemalang-Maulana-Satria-Nugraha.webp" alt="Maulana Satria Nugraha saar mengikuti Rapat Persiapan SPMB SDIT Bina Ilmu Pemalang sebagai Sekretaris" />
+              <p>Rapat Persiapan SPMB SDIT Bina Ilmu Pemalang tahun 2026</p>
             </div>
-            <div> -- Gambar 2 --
-              <img src="gambar.jpg" alt="gambar" />
-              <p>Isi tulisan</p>
+            <div> <!-- Gambar 2 -->
+              <img src="/gallery/Yayasan-Haqqus-Sunnah-Pemalang/Pengecekan-dan-Uji-Kelayakan-Website-SPMB-SDIT-SMPIT-Bina-Ilmu-Pemalang-Maulana-Satria-Nugraha.webp" alt="Pengecekan dan Uji Kelayakan Website SPMB SDIT-SMPIT Bina Ilmu Pemalang - Maulana Satria Nugraha" />
+              <p>Pengecekan dan Uji Kelayakan Website SPMB SDIT-SMPIT Bina Ilmu Pemalang</p>
             </div>
-            <div> -- Gambar 3 --
-              <img src="gambar.jpg" alt="gambar" />
-              <p>Isi tulisan</p>
+          </div>
+          <div class="Album">
+            <div> <!-- Gambar 3 -->
+              <img src="/gallery/Yayasan-Haqqus-Sunnah-Pemalang/Rapat-Koordinasi-Penyusunan-RKAS-Bersama-Komite-Sekolah-Maulana-Satria-Nugraha.webp" alt="Maulana Satria Nugraha saat mengikuti Rapat Internal Penyusunan RKAS SDIT & SMPIT Bina Ilmu Pemalang Tahun 2026 sebagai Sekretaris" />
+              <p>Rapat Internal Penyusunan RKAS SDIT & SMPIT Bina Ilmu Pemalang Tahun 2026</p>
+            </div>
+            <div> <!-- Gambar 4 -->
+              <img src="/gallery/Yayasan-Haqqus-Sunnah-Pemalang/Rapat-Koordinasi-Penyusunan-RKAS-Bersama-Komite-Sekolah-Maulana-Satria-Nugraha.webp" alt="Maulana Satria Nugraha saat mengikuti Rapat Koordinasi Penyusunan RKAS Bersama Komite Sekolah, sebagai transparansi penggunaan Dana Sekolah kepada Wali Murid" />
+              <p>Rapat Koordinasi Penyusunan RKAS Bersama Komite Sekolah, sebagai transparansi penggunaan Dana Sekolah kepada Wali Murid</p>
             </div>
           </div>
         </article>
-        -->
+        
         <article>
           <h2>Yayasan Mentari Sehat Indonesia - SSR Pemalang</h2>
           <div class="Album">
