Memperbaiki Salah gambar antara Rapat Internal RKAS dan Rapat Koordinasi RKAS Komite

--- a/gallery.html
+++ b/gallery.html
@@ -103,7 +103,7 @@
           </div>
           <div class="Album">
             <div> <!-- Gambar 3 -->
-              <img src="/gallery/Yayasan-Haqqus-Sunnah-Pemalang/Rapat-Koordinasi-Penyusunan-RKAS-Bersama-Komite-Sekolah-Maulana-Satria-Nugraha.webp" alt="Maulana Satria Nugraha saat mengikuti Rapat Internal Penyusunan RKAS SDIT & SMPIT Bina Ilmu Pemalang Tahun 2026 sebagai Sekretaris" />
+              <img src="/gallery/Yayasan-Haqqus-Sunnah-Pemalang/Rapat-Internal-Penyusunan-RKAS-SDIT-&-SMPIT-Bina-Ilmu-Pemalang-Tahun-2026-Maulana-Satria-Nugraha.webp" alt="Maulana Satria Nugraha saat mengikuti Rapat Internal Penyusunan RKAS SDIT & SMPIT Bina Ilmu Pemalang Tahun 2026 sebagai Sekretaris" />
               <p>Rapat Internal Penyusunan RKAS SDIT & SMPIT Bina Ilmu Pemalang Tahun 2026</p>
             </div>
             <div> <!-- Gambar 4 -->
